--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "socket.io": "^4.5.4",
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.2.0",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "bad-words": "^4.0.0"
   },
   "engines": {
     "node": ">=18"
