--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.2.0",
     "xss": "^1.0.15",
-    "bad-words": "^4.0.0"
+    "bad-words": "3.0.4"
   },
   "engines": {
     "node": ">=18"
